Revisar actualizar hechos agregador