@@ -27,48 +27,56 @@ public class ServiceColecciones {
             .orElseThrow(() -> new IllegalArgumentException("Colección no encontrada"));
     List<Criterio> inclusion = construirCriteriosInclusion(filtros);
     List<Criterio> exclusion = construirCriteriosExclusion(filtros);
-    List<Criterio> totalFiltrosInclusion = Stream.concat(coleccion.getCriterioPertenencia().stream(), inclusion.stream())
+   /* List<Criterio> totalFiltrosInclusion = Stream.concat(coleccion.getCriterios().stream(), inclusion.stream())
             .distinct()
-            .collect(Collectors.toList());
-    List<Criterio> totalFiltrosExclusion = Stream.concat(coleccion.getCriterioNoPertenencia().stream(), exclusion.stream())
+            .collect(Collectors.toList());*/
+    /*List<Criterio> totalFiltrosExclusion = Stream.concat(coleccion.getCriterioNoPertenencia().stream(), exclusion.stream())
             .distinct()
-            .collect(Collectors.toList());
+            .collect(Collectors.toList());*/
+    List<Criterio> todosLosCriterios = Stream.of(
+            coleccion.getCriterios().stream(),
+            inclusion.stream(),
+            exclusion.stream()
+        )
+        .flatMap(s -> s)   // achata todos los streams en uno solo
+        .distinct()        // evita duplicados
+        .toList();
     //System.out.println("Filtros totales: " + totalFiltrosInclusion);
     //System.out.println("Filtros totales: " + totalFiltrosExclusion);
     // if (modoNavegacion == ModosDeNavegacion.IRRESTRICTA)
-    return repositorioHechos.filtrarPorCriterios(totalFiltrosInclusion,totalFiltrosExclusion);
+    return repositorioHechos.filtrarPorCriterios(todosLosCriterios);
     //TODO implementar modo CURADA
   }
 
   private List<Criterio> construirCriteriosInclusion(FiltrosHechosDTO filtros) {
     List<Criterio> inclusion = new ArrayList<>();
-    if (filtros.getTituloP() != null) inclusion.add(new CriterioTitulo(filtros.getTituloP()));
-    if (filtros.getDescripcionP() != null) inclusion.add(new CriterioDescripcion(filtros.getDescripcionP()));
-    if (filtros.getCategoriaP() != null) inclusion.add(new CriterioCategoria(filtros.getCategoriaP()));
+    if (filtros.getTituloP() != null) inclusion.add(new CriterioTitulo(filtros.getTituloP(),true));
+    if (filtros.getDescripcionP() != null) inclusion.add(new CriterioDescripcion(filtros.getDescripcionP(),true));
+    if (filtros.getCategoriaP() != null) inclusion.add(new CriterioCategoria(filtros.getCategoriaP(),true));
     if (filtros.getFechaReporteDesdeP() != null || filtros.getFechaReporteHastaP() != null)
-      inclusion.add(new CriterioFechaReportaje(filtros.getFechaReporteDesdeP(), filtros.getFechaReporteHastaP()));
+      inclusion.add(new CriterioFechaReportaje(filtros.getFechaReporteDesdeP(), filtros.getFechaReporteHastaP(),true));
     if (filtros.getFechaAcontecimientoDesdeP() != null || filtros.getFechaAcontecimientoHastaP() != null)
-      inclusion.add(new CriterioFecha(filtros.getFechaAcontecimientoDesdeP(), filtros.getFechaAcontecimientoHastaP()));
+      inclusion.add(new CriterioFecha(filtros.getFechaAcontecimientoDesdeP(), filtros.getFechaAcontecimientoHastaP(),true));
     if (filtros.getLatitudP() != null && filtros.getLongitudP() != null)
-      inclusion.add(new CriterioUbicacion(filtros.getLatitudP(), filtros.getLongitudP()));
+      inclusion.add(new CriterioUbicacion(filtros.getLatitudP(), filtros.getLongitudP(), true));
     if (filtros.getTipoMultimediaP() != null)
-      inclusion.add(new CriterioMultimedia(TipoMultimedia.valueOf(filtros.getTipoMultimediaP())));
+      inclusion.add(new CriterioMultimedia(TipoMultimedia.valueOf(filtros.getTipoMultimediaP()),true));
     return inclusion;
   }
 
   private List<Criterio> construirCriteriosExclusion(FiltrosHechosDTO filtros) {
     List<Criterio> exclusion = new ArrayList<>();
-    if (filtros.getTituloNP() != null) exclusion.add(new CriterioTitulo(filtros.getTituloNP()));
-    if (filtros.getDescripcionNP() != null) exclusion.add(new CriterioDescripcion(filtros.getDescripcionNP()));
-    if (filtros.getCategoriaNP() != null) exclusion.add(new CriterioCategoria(filtros.getCategoriaNP()));
+    if (filtros.getTituloNP() != null) exclusion.add(new CriterioTitulo(filtros.getTituloNP(),false));
+    if (filtros.getDescripcionNP() != null) exclusion.add(new CriterioDescripcion(filtros.getDescripcionNP(),false));
+    if (filtros.getCategoriaNP() != null) exclusion.add(new CriterioCategoria(filtros.getCategoriaNP(),false));
     if (filtros.getFechaReporteDesdeNP() != null || filtros.getFechaReporteHastaNP() != null)
-      exclusion.add(new CriterioFechaReportaje(filtros.getFechaReporteDesdeNP(), filtros.getFechaReporteHastaNP()));
+      exclusion.add(new CriterioFechaReportaje(filtros.getFechaReporteDesdeNP(), filtros.getFechaReporteHastaNP(),false));
     if (filtros.getFechaAcontecimientoDesdeNP() != null || filtros.getFechaAcontecimientoHastaNP() != null)
-      exclusion.add(new CriterioFecha(filtros.getFechaAcontecimientoDesdeNP(), filtros.getFechaAcontecimientoHastaNP()));
+      exclusion.add(new CriterioFecha(filtros.getFechaAcontecimientoDesdeNP(), filtros.getFechaAcontecimientoHastaNP(),false));
     if (filtros.getLatitudNP() != null && filtros.getLongitudNP() != null)
-      exclusion.add(new CriterioUbicacion(filtros.getLatitudNP(), filtros.getLongitudNP()));
+      exclusion.add(new CriterioUbicacion(filtros.getLatitudNP(), filtros.getLongitudNP(), false));
     if (filtros.getTipoMultimediaNP() != null)
-      exclusion.add(new CriterioMultimedia(TipoMultimedia.valueOf(filtros.getTipoMultimediaNP())));
+      exclusion.add(new CriterioMultimedia(TipoMultimedia.valueOf(filtros.getTipoMultimediaNP()),false));
     return exclusion;
   }
 
@@ -88,14 +96,7 @@ public class ServiceColecciones {
     String nombre = coleccionDTO.getConsenso(); // o de tu body Map: (String) body.get("consenso")
     Consenso consenso = Consenso.fromString(nombre);
 
-    ArrayList<Criterio> pertenencia = coleccionDTO.getCriteriosPertenencia().stream()
-            .map(CriterioDTO::toDomain)
-            .collect(Collectors.toCollection(ArrayList::new));
-    ArrayList<Criterio> noPertenencia = coleccionDTO.getCriteriosNoPertenencia().stream()
-            .map(CriterioDTO::toDomain)
-            .collect(Collectors.toCollection(ArrayList::new));
-
-    Coleccion coleccion = new Coleccion(coleccionDTO.getTitulo(), coleccionDTO.getDescripcion(), consenso, pertenencia, noPertenencia);
+    Coleccion coleccion = new Coleccion(coleccionDTO.getTitulo(), coleccionDTO.getDescripcion(), consenso,(ArrayList)coleccionDTO.getCriterios());
 
     repositorioColecciones.crear(coleccion);
     return new ColeccionDTO(coleccion);
@@ -107,17 +108,11 @@ public class ServiceColecciones {
     if (coleccionDTO.getTitulo() != null) coleccion.setTitulo(coleccionDTO.getTitulo());
     if (coleccionDTO.getDescripcion() != null) coleccion.setDescripcion(coleccionDTO.getDescripcion());
     if (coleccionDTO.getConsenso() != null) coleccion.setConsenso(Consenso.fromString(coleccionDTO.getConsenso()));
-    if (coleccionDTO.getCriteriosPertenencia() != null) {
-      List<Criterio> nuevosCriterios = coleccionDTO.getCriteriosPertenencia().stream()
+    if (coleccionDTO.getCriterios() != null) {
+      List<Criterio> nuevosCriterios = coleccionDTO.getCriterios().stream()
               .map(CriterioDTO::toDomain)
               .toList();
-      coleccion.setCriterioPertenencia(new ArrayList<>(nuevosCriterios));
-    }
-    if (coleccionDTO.getCriteriosNoPertenencia() != null) {
-      List<Criterio> nuevosCriterios = coleccionDTO.getCriteriosNoPertenencia().stream()
-              .map(CriterioDTO::toDomain)
-              .toList();
-      coleccion.setCriterioNoPertenencia(new ArrayList<>(nuevosCriterios));
+      coleccion.setCriterios(new ArrayList<>(nuevosCriterios));
     }
     return new ColeccionDTO(coleccion);
   }
@@ -143,14 +138,14 @@ public class ServiceColecciones {
   public void agregarFuenteDeDatos(UUID idColeccion, Integer idFuente) {
     Coleccion col = repositorioColecciones.findById(idColeccion)
             .orElseThrow(() -> new NoSuchElementException("Colección no encontrada"));
-    col.agregarCriterioPertenencia(new CriterioFuenteDeDatos(idFuente));
+    col.agregarCriterio(new CriterioFuenteDeDatos(idFuente, true));
     repositorioColecciones.update(col);
   }
 
   public void eliminarFuenteDeDatos(UUID idColeccion, Integer idFuente) {
     Coleccion col = repositorioColecciones.findById(idColeccion)
             .orElseThrow(() -> new IllegalArgumentException("Colección no encontrada"));
-    col.eliminarCriterioPertenencia(new CriterioFuenteDeDatos(idFuente));
+    col.eliminarCriterio(new CriterioFuenteDeDatos(idFuente,true));
     repositorioColecciones.update(col);
   }
 }
